fix: acessibility and contrast issues

--- a/styles/hero.module.scss
+++ b/styles/hero.module.scss
@@ -1,11 +1,24 @@
-@use 'tokens';
-@use 'breakpoints';
+@use "tokens";
+@use "breakpoints";
 
 .hero {
   position: relative;
   width: 100%;
 
   @include tokens.sectionPadding;
+
+  h1 {
+    font-family: tokens.$archivo;
+    font-size: 2em;
+    font-weight: 400;
+    line-height: 130%;
+    color: map-get(tokens.$colors, "primary", "medium");
+    margin: 0;
+
+    @include breakpoints.sm {
+      font-size: 1.5em;
+    }
+  }
 
   .wrapper {
     position: relative;
